--- a/lifecycle_comps/lifecycle_comps/package.json
+++ b/lifecycle_comps/lifecycle_comps/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bluebird": "^3.7.2",
     "jquery": "^3.5.1",
+    "jquery-ui": "^1.12.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
