--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 todo_item_list/client/node_modules
 loading_routes/loading_routes/node_modules
 lifecycle_comps/lifecycle_comps/node_modules
+find_device/find_device/node_modules
