lift up state in Ract

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ todo_item_list/client/node_modules
 loading_routes/loading_routes/node_modules
 lifecycle_comps/lifecycle_comps/node_modules
 find_device/find_device/node_modules
+lift_up_state/lift_up_state/node_modules
