--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ loading_routes/loading_routes/node_modules
 lifecycle_comps/lifecycle_comps/node_modules
 find_device/find_device/node_modules
 lift_up_state/lift_up_state/node_modules
+async_data_render/async_data_render/node_modules
