--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ lifecycle_comps/lifecycle_comps/node_modules
 find_device/find_device/node_modules
 lift_up_state/lift_up_state/node_modules
 async_data_render/async_data_render/node_modules
+prop_validation/prop_validation/node_modules
