--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ find_device/find_device/node_modules
 lift_up_state/lift_up_state/node_modules
 async_data_render/async_data_render/node_modules
 prop_validation/prop_validation/node_modules
+navroutes/navroutes/node_modules
+
