lazy comps start

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,6 @@ lift_up_state/lift_up_state/node_modules
 async_data_render/async_data_render/node_modules
 prop_validation/prop_validation/node_modules
 navroutes/navroutes/node_modules
+lazycomps/lazycomps/node_modules
+
 
