react server setup

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,6 @@ async_data_render/async_data_render/node_modules
 prop_validation/prop_validation/node_modules
 navroutes/navroutes/node_modules
 lazycomps/lazycomps/node_modules
+react_server/react_server/node_modules
 
 
