node index.js start server rendering

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ prop_validation/prop_validation/node_modules
 navroutes/navroutes/node_modules
 lazycomps/lazycomps/node_modules
 react_server/react_server/node_modules
+ui_comps/ui_comps/node_modules
 
