--- a/react_server/react_server/package.json
+++ b/react_server/react_server/package.json
@@ -10,7 +10,9 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "ignore-styles": "^5.0.1",
+    "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
