init redux boiler

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ navroutes/navroutes/node_modules
 lazycomps/lazycomps/node_modules
 react_server/react_server/node_modules
 ui_comps/ui_comps/node_modules
+redux_boiler/redux_boiler/node_modules
 
